# first-person-credentials

./: Cargo.toml
docs/: lfdt.md
src/: lib.rs  utils.rs
src/merkle_tree/: constraints.rs  mod.rs
src/prf/: constraints.rs  mod.rs
src/prf/config/: ed_on_bls12_377.rs  ed_on_bw6_761.rs  mod.rs
src/random_oracle/: constraints.rs  mod.rs
src/random_oracle/blake2s/: constraints.rs  mod.rs
src/record_commitment/: mod.rs
src/record_commitment/kzg/: constraints.rs  mod.rs
src/record_commitment/pedersen/: constraints.rs  mod.rs
src/record_commitment/sha256/: constraints.rs  mod.rs
src/signature/: constraints.rs  mod.rs
src/signature/schnorr/: constraints.rs  mod.rs
src/vector_commitment/: mod.rs
src/vector_commitment/bytes/: mod.rs
src/vector_commitment/bytes/pedersen/: constraints.rs  mod.rs
src/vector_commitment/bytes/pedersen/config/: ed_on_bls12_377.rs  ed_on_bw6_761.rs  mod.rs
src/vector_commitment/bytes/sha256/: common.rs  constraints.rs  mod.rs
tests/: first_person_test_app1.rs  first_person_test_app2.rs  first_person_test_app3.rs  first_person_test_app4.rs  first_person_test_app5.rs  first_person_test_app6.rs  local_proof_test_app1.rs  local_proof_test_app2.rs  local_proof_test_app3.rs  local_proof_test_app4.rs  local_proof_test_app5.rs  local_proof_test_app6.rs  local_proof_test_app7.rs  mod.rs
tests/designs/: first_person_test_app3.excalidraw  first_person_test_app4.excalidraw
